--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -14,13 +14,15 @@ jdbc_password=
 # for SQL Server
 #jdbc_url=jdbc:sqlserver://127.0.0.1:1433;DatabaseName=gdtopway
 #jpa_database_platform=org.hibernate.dialect.SQLServer2012Dialect
+
 # for MySQL : MySQL: CREATE DATABASE dbname DEFAULT CHARACTER SET utf8 COLLATE utf8_general_ci;
-#jdbc_url=jdbc:mysql://127.0.0.1:3306/audit?useUnicode=true&characterEncoding=UTF-8&useSSL=false
-#jdbc_driverClassName=com.mysql.jdbc.Driver
+#jdbc_url=jdbc:mysql://ora12c.com:3306/fund?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+#com.mysql.jdbc.Driver
+#jdbc_driverClassName=com.mysql.cj.jdbc.Driver
 #jpa_database_platform=org.hibernate.dialect.MySQL5Dialect
 #jdbc_validationQuery=SELECT 'x' from dual
 #jdbc_username=root
-#jdbc_password=Raya2012@mysql!
+#jdbc_password=123456
 
 # for Oracle
 #jdbc_url=jdbc:oracle:thin:@localhost:1521/orcl
