--- a/pom.xml
+++ b/pom.xml
@@ -46,11 +46,12 @@
 		<restlet.version>2.0-M3</restlet.version>
 		<h2.version>1.3.170</h2.version>
 		<oracle.version>12.1</oracle.version>
-		<mysql.version>5.1.39</mysql.version>
+		<mysql.version>6.0.6</mysql.version>
 		<activiti.version>5.17.0</activiti.version>
 		<redis.version>2.5.1</redis.version>
 		<sitemesh.version>3.0.0</sitemesh.version>
 		<shiro.version>1.2.3</shiro.version>
+		<spring.webflow.version>2.4.0.RELEASE</spring.webflow.version>
 		<httpcomponents.version>4.4.1</httpcomponents.version>
 
 		<!-- Plugin的属性定义 -->
@@ -65,15 +66,16 @@
 
 	<!-- 设定除中央仓库(repo1.maven.org/maven2/)外的其他仓库,按设定顺序进行查找. -->
 	<repositories>
-		<repository>
-			<id>central</id>
-			<name>Central Repository</name>
-			<url>http://repo.maven.apache.org/maven2</url>
-		</repository>
+
 		<repository>
 			<id>alimaven</id>
 			<name>alimaven</name>
 			<url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+		</repository>
+		<repository>
+			<id>central</id>
+			<name>Central Repository</name>
+			<url>http://repo.maven.apache.org/maven2</url>
 		</repository>
 		<repository>
 			<id>org.springframework.maven.milestone</id>
@@ -125,11 +127,11 @@
 			<version>${mysql.version}</version>
 			<scope>runtime</scope>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc7</artifactId>
 			<version>${oracle.version}</version>
-		</dependency>
+		</dependency>-->
 
 		<!-- datasource pool -->
 		<dependency>
@@ -150,6 +152,12 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.webflow</groupId>
+			<artifactId>spring-webflow</artifactId>
+			<version>${spring.webflow.version}</version>
 		</dependency>
 
 		<!-- j2ee web spec -->
