--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ auth_control_level=high
 
 # \u6846\u67b6\u6269\u5c55\u5c5e\u6027\u52a0\u8f7d\uff1aDynamicConfigService\u76f8\u5173\u63a5\u53e3\u83b7\u53d6\u53c2\u6570\u503c\uff0c\u4f18\u5148\u4ece\u6570\u636e\u5e93ConfigProperty\u8868\u53d6\u503c\uff0c\u672a\u53d6\u5230\u5219\u53d6\u5c5e\u6027\u914d\u7f6e\u6587\u4ef6\u4e2d\u7684\u503c
 # \u4e3a\u4e86\u907f\u514d\u610f\u5916\u7684\u6570\u636e\u5e93\u914d\u7f6e\u5bfc\u81f4\u7cfb\u7edf\u5d29\u6e83\uff0c\u7ea6\u5b9a\u4ee5cfg\u6253\u5934\u6807\u8bc6\u7684\u53c2\u6570\u8868\u793a\u53ef\u4ee5\u88ab\u6570\u636e\u5e93\u53c2\u6570\u8986\u5199\uff0c\u5176\u4f59\u7684\u5219\u4e0d\u4f1a\u8986\u76d6\u6587\u4ef6\u5b9a\u4e49\u7684\u5c5e\u6027\u503c
-cfg_system_title=GDTopway Prototype
+cfg_system_title=TinaZhu
 
 # \u81ea\u52a9\u6ce8\u518c\u7ba1\u7406\u8d26\u53f7\u529f\u80fd\u5f00\u5173\uff1atrue=\u5173\u95ed\u7ba1\u7406\u8d26\u53f7\u81ea\u52a9\u6ce8\u518c\uff0cfalse=\u5f00\u653e\u6ce8\u518c
 cfg_mgmt_signup_disabled=false
