--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -5,12 +5,12 @@ jdbc_min_idle=10
 jdbc_max_active=20
 
 # Just for showcase
-jdbc_url=jdbc:h2:mem:h2db
-jdbc_driverClassName=org.h2.Driver
-jpa_database_platform=org.hibernate.dialect.H2Dialect
-jdbc_validationQuery=SELECT 'x'
-jdbc_username=root
-jdbc_password=
+#jdbc_url=jdbc:h2:mem:h2db
+#jdbc_driverClassName=org.h2.Driver
+#jpa_database_platform=org.hibernate.dialect.H2Dialect
+#jdbc_validationQuery=SELECT 'x'
+#jdbc_username=root
+#jdbc_password=
 # for SQL Server
 #jdbc_url=jdbc:sqlserver://127.0.0.1:1433;DatabaseName=gdtopway
 #jpa_database_platform=org.hibernate.dialect.SQLServer2012Dialect
@@ -25,12 +25,12 @@ jdbc_password=
 #jdbc_password=123456
 
 # for Oracle
-#jdbc_url=jdbc:oracle:thin:@localhost:1521/orcl
-#jdbc_driverClassName=oracle.jdbc.driver.OracleDriver
-#jpa_database_platform=org.hibernate.dialect.Oracle10gDialect
-#jdbc_validationQuery=SELECT 'x' from dual
-#jdbc_username=new_audit
-#jdbc_password=oracle
+jdbc_url=jdbc:oracle:thin:@ora12c.com:1521/orcl
+jdbc_driverClassName=oracle.jdbc.driver.OracleDriver
+jpa_database_platform=org.hibernate.dialect.Oracle10gDialect
+jdbc_validationQuery=SELECT 'x' from dual
+jdbc_username=fund
+jdbc_password=fund
 
 #default same as master, config different slave parameters in production mode
 jdbc_url_slave01=${jdbc_url}
