--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 		<jetty.version>7.6.8.v20121106</jetty.version>
 		<restlet.version>2.0-M3</restlet.version>
 		<h2.version>1.3.170</h2.version>
-		<oracle.version>12.1</oracle.version>
+		<oracle.version>1.0</oracle.version>
 		<mysql.version>6.0.6</mysql.version>
 		<activiti.version>5.17.0</activiti.version>
 		<redis.version>2.5.1</redis.version>
@@ -127,11 +127,11 @@
 			<version>${mysql.version}</version>
 			<scope>runtime</scope>
 		</dependency>
-		<!--<dependency>
+		<dependency>
 			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc7</artifactId>
+			<artifactId>ojdbc6</artifactId>
 			<version>${oracle.version}</version>
-		</dependency>-->
+		</dependency>
 
 		<!-- datasource pool -->
 		<dependency>
